# serum2gen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
serum2/: __init__.py  __main__.py  cli.py  core.py  enums.py  generator.py  ml.py  modulation.py  paths.py  preset.py
tests/: conftest.py  test_cli.py  test_core.py  test_enums.py  test_generator.py  test_ml.py  test_modulation.py  test_paths.py  test_preset.py
